--- a/lms/src/main/webapp/PIBoardDetail.html
+++ b/lms/src/main/webapp/PIBoardDetail.html
@@ -3,14 +3,8 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/PILayout">
 <meta charset="utf-8">
-<title>커뮤니티</title>
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
-<style>
-	.btn {
-	float: right;
-	}
-</style>
 </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
@@ -22,26 +16,22 @@
 		<div class="col-sm-10">
 			<h1>커뮤니티</h1>	<!-- th:onclick="|window.location.href='@{/update(server=${key})}'|" -->
 			<!-- <div>
-				<button type="button" id="btn-write" class="btn btn-outline-info" th:onclick="|location.href='@{/PIBoardwrite(institutionCode=${institutionCode})}'|">글쓰기</button><br>
-			</div> -->
-			<div>
 				<a th:href="@{'/PIBoardwrite?institutionCode='+${institutionCode}}" id="btn-write" class="btn btn-outline-info">글쓰기</a>
-			</div>
+			</div> -->
 			<table class="table table-hover">
 				<thead>
 					<tr>
 						<th scope="col">제목</th>
-						<th scope="col">작성자</th>
+						<th scope="row" th:text="${board.boardTitle}"></th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="board:${boardList}">
-						<!-- <input type="hidden" value="${member.memberCode}"> -->
-						<!-- <input type="hidden" value="${member.memberCode}"> -->
-						<th scope="row" th:href="@{'/PIBoardDetail?institutionCode='+${institutionCode}}" th:text="${board.boardTitle}"></th>
+					<tr>
+						<td>작성자</td>
 						<td th:text="${board.memberName}"></td>
 				</tbody>
 			</table>
+						<input type="hidden" value="${member.memberCode}">
 		</div>
 		<div class="col-sm-1"></div>
 	</div>
